# MicroV

./: .clang-format  .doxygen  .doxygen.txt  .gitignore  .gitlab-ci.yml  .gitmodules  .gitsubtrees  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  LICENSE  MAINTAINERS  README.md  build.ps1  buildroot.config.in  config.cmake  get_xen_headers.py  local.mk.in  msbuild.ps1  rundom0-cygwin.sh  rundom0.sh  symstore.ps1
bfexec/src/: CMakeLists.txt  main.cpp
bflinux/: build.sh  (+8 more)
bfvmm/: CMakeLists.txt
bfvmm/include/: acpi.h  clflush.h  compiler.h  compiler.h.in  page.h  printv.h  ring.h
bfvmm/include/domain/: domain.h  domain_factory.h  domain_manager.h  manager.h
bfvmm/include/iommu/: dmar.h  entry.h  iommu.h  regs.h
bfvmm/include/pci/: bar.h  cfg.h  config.h  dev.h  msi.h
bfvmm/include/xen/: cpuid.h  domain.h  domctl.h  evtchn.h  flask.h  gnttab.h  hvm.h  memory.h  page.h  physdev.h  sysctl.h  time.h  types.h  util.h  vcpu.h  version.h  virq.h  xen.h  xencon.h  xenmem.h  xenver.h
bfvmm/src/: CMakeLists.txt  acpi.cpp  clflush.asm  domain.cpp  iommu.cpp  pci.cpp
bfvmm/src/debug/: unistd.cpp
bfvmm/src/domain/: CMakeLists.txt  domain.cpp
bfvmm/src/entry/: entry.cpp
bfvmm/src/hve/: CMakeLists.txt
bfvmm/src/main/: CMakeLists.txt
bfvmm/src/xen/: CMakeLists.txt  cpuid.cpp  cpupool.cpp  domain.cpp  domctl.cpp  evtchn.cpp  flask.cpp  gnttab.cpp  hvm.cpp  memory.cpp  physdev.cpp  sysctl.cpp  util.cpp  vcpu.cpp  version.cpp  xen.cpp  xencon.cpp  xenmem.cpp  xenver.cpp
shim/tests/: CMakeLists.txt
shim/tests/include/: constants.h  debug.h  helpers.hpp  types.h
shim/tests/src/: CMakeLists.txt  detect_hypervisor.cpp  platform.c  platform.cpp  test_detect_hypervisor.cpp  test_handle_device_kvm_get_device_attr.cpp  test_handle_device_kvm_has_device_attr.cpp  test_handle_device_kvm_set_device_attr.cpp  test_handle_system_kvm_check_extension.cpp  test_handle_system_kvm_create_vm.cpp  test_handle_system_kvm_destroy_vm.cpp  test_handle_system_kvm_get_api_version.cpp  test_handle_system_kvm_get_emulated_cpuid.cpp  test_handle_system_kvm_get_msr_feature_index_list.cpp  test_handle_system_kvm_get_msr_index_list.cpp  test_handle_system_kvm_get_msrs.cpp  test_handle_system_kvm_get_supported_cpuid.cpp  test_handle_system_kvm_get_vcpu_mmap_size.cpp  test_handle_system_kvm_memory_encrypt_op.cpp  test_handle_system_kvm_memory_encrypt_reg_region.cpp  test_handle_system_kvm_memory_encrypt_unreg_region.cpp  test_handle_system_kvm_x86_get_mce_cap_supported.cpp  test_handle_vcpu_kvm_enable_cap.cpp  test_handle_vcpu_kvm_get_cpuid2.cpp  test_handle_vcpu_kvm_get_fpu.cpp  test_handle_vcpu_kvm_get_lapic.cpp  test_handle_vcpu_kvm_get_mp_state.cpp  test_handle_vcpu_kvm_get_msrs.cpp  test_handle_vcpu_kvm_get_nested_state.cpp  test_handle_vcpu_kvm_get_one_reg.cpp  test_handle_vcpu_kvm_get_regs.cpp  test_handle_vcpu_kvm_get_sregs.cpp  test_handle_vcpu_kvm_get_supported_hv_cpuid.cpp  test_handle_vcpu_kvm_get_tsc_khz.cpp  test_handle_vcpu_kvm_get_vcpu_events.cpp  test_handle_vcpu_kvm_get_xcrs.cpp  test_handle_vcpu_kvm_get_xsave.cpp  test_handle_vcpu_kvm_interrupt.cpp  test_handle_vcpu_kvm_kvmclock_ctrl.cpp  test_handle_vcpu_kvm_nmi.cpp  (+60 more)
vmm/: CMakeLists.txt
vmm/include/: acpi.h  allocated_status_t.hpp  atomic_ops.h  compiler.h  compiler.h.in  errc_types.hpp  map_page_flags.hpp  page.h  page_1g_t.hpp  page_2m_t.hpp  page_4k_t.hpp  pause.hpp  printv.h  queue.hpp  queue_t.hpp  ring.h  running_status_t.hpp  spin_lock.h  tls_t.hpp  types.h
vmm/include/domain/: domain.h  factory.h  manager.h
vmm/include/iommu/: dmar.h  entry.h  iommu.h  regs.h
vmm/include/pci/: bar.h  cfg.h  dev.h  msi.h  pci.h
vmm/include/x64/: cpuid.hpp  cr_access_t.hpp  pdpt_t.hpp  pdpte_t.hpp  pdt_t.hpp  pdte_t.hpp  pml4t_t.hpp  pml4te_t.hpp  pt_t.hpp  pte_t.hpp
vmm/integration/: CMakeLists.txt  mv_debug_op_out.cpp  mv_emulate_interrupts.cpp  mv_emulate_io.cpp  mv_emulate_nmi.cpp  mv_emulate_queue_interrupt.cpp  mv_handle_op_close_handle.cpp  mv_handle_op_open_handle.cpp  mv_hypercall_t.cpp  mv_pp_op_clr_shared_page_gpa.cpp  mv_pp_op_cpuid_get_supported_list.cpp  mv_pp_op_msr_get_supported_list.cpp  mv_pp_op_ppid.cpp  mv_pp_op_set_shared_page_gpa.cpp  mv_pp_op_tsc_get_khz.cpp  mv_pp_op_tsc_set_khz.cpp  mv_vm_op_create_vm.cpp  mv_vm_op_destroy_vm.cpp  mv_vm_op_mmio_map.cpp  mv_vm_op_mmio_unmap.cpp  mv_vm_op_vmid.cpp  mv_vp_op_create_vp.cpp  mv_vp_op_destroy_vp.cpp  mv_vp_op_vmid.cpp  mv_vp_op_vpid.cpp  mv_vps_op_gla_to_gpa.cpp  mv_vs_op_cpuid_get_list.cpp  mv_vs_op_cpuid_set_list.cpp  mv_vs_op_create_vs.cpp  mv_vs_op_destroy_vs.cpp  mv_vs_op_fpu_get_all.cpp  mv_vs_op_fpu_set_all.cpp  mv_vs_op_gla_to_gpa.cpp  mv_vs_op_gva_to_gla.cpp  mv_vs_op_mp_state_get.cpp  mv_vs_op_mp_state_set.cpp  mv_vs_op_msr_get.cpp  mv_vs_op_msr_get_list.cpp  mv_vs_op_msr_set.cpp  mv_vs_op_msr_set_list.cpp  (+11 more)
vmm/src/: CMakeLists.txt  acpi.cpp  alloc_bitmap.hpp  dispatch_bootstrap.hpp  dispatch_fail.hpp  dispatch_vmcall_debug_op.hpp  dispatch_vmcall_handle_op.hpp  dispatch_vmcall_helpers.hpp  dispatch_vmcall_id_op.hpp  dispatch_vmcall_mv_debug_op.hpp  dispatch_vmcall_mv_handle_op.hpp  dispatch_vmcall_mv_id_op.hpp  dispatch_vmcall_mv_pp_op.hpp  dispatch_vmcall_mv_vm_op.hpp  dispatch_vmcall_mv_vp_op.hpp  dispatch_vmcall_mv_vs_op.hpp  dispatch_vmcall_pp_op.hpp  dispatch_vmcall_vm_op.hpp  dispatch_vmcall_vp_op.hpp  dispatch_vmcall_vps_op.hpp  dispatch_vmcall_vs_op.hpp  dispatch_vmexit_unknown.hpp  dispatch_vmexit_vmcall.hpp  domain.cpp  iommu.cpp  lock_guard_t.hpp  main.cpp  page_pool_helpers.hpp  page_pool_t.hpp  pci.cpp  pp_pool_t.hpp  pp_t.hpp  pp_unique_map_t.hpp  pp_unique_shared_page_t.hpp  rand.asm  second_level_page_table_t.hpp  spinlock_helpers.hpp  spinlock_t.hpp  tls_initialize.hpp  vm_pool_t.hpp  (+5 more)
vmm/tests/: CMakeLists.txt
vms/: 16bit_endless_loop_test.S  16bit_io_in_out_test.S  16bit_io_test.S  32bit_endless_loop_test.S  32bit_io_test.S  CMakeLists.txt
vms/alpine/: alpine_iso_k3s.exp  demo.sh  deployment.yaml  index.html  setup.sh
vms/libvirt/: README  focal.xml
vms/linux/: CMakeLists.txt  config_debug  config_release  init.cpp
(+1684 files in other folders)
